--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
+        # Use v2.4.0 or later for Go 1.24 support
+        version: v2.4.0
         args: --timeout=5m
         working-directory: ./
 
