--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -41,8 +41,8 @@ jobs:
         report-path: gitleaks-report.sarif
     
     - name: Upload Secret Scan Results
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      uses: github/codeql-action/upload-sarif@v4
+      if: always() && hashFiles('gitleaks-report.sarif') != ''
       with:
         sarif_file: gitleaks-report.sarif
 
