--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,9 @@
 # golangci-lint configuration for llm-providers
 # See https://golangci-lint.run/usage/configuration/ for full options
 
+# Version is required for golangci-lint v2.x
+version: 2
+
 run:
   # Timeout for analysis
   timeout: 5m
