fix: simplify golangci-lint config to minimal v2.x compatible format

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,73 +45,11 @@ linters:
     - errorlint         # Error wrapping lint - important
     - unused            # Unused variables, constants, functions, and types
     - errcheck          # Error checking - CRITICAL for production (ensures all errors are handled)
-    - govet             # Go vet - catches common bugs (printf check disabled in settings)
+    - govet             # Go vet - catches common bugs
     - staticcheck       # Static analysis - finds bugs and suggests improvements
     - gosimple          # Code simplification - prevents bugs through simplification
     - bodyclose         # HTTP response body closing - prevents resource leaks
     - noctx             # Context in HTTP requests - important for cancellation/timeouts
-
-# Linter settings (renamed from linters-settings in v2)
-linter:
-  # govet settings - disable printf check to allow %w in fmt.Sprintf/log.Fatalf
-  # Note: %w is only officially supported in fmt.Errorf, but %v works fine for logging
-  govet:
-    disable:
-      - printf
-  
-  # goimports settings
-  goimports:
-    local-prefixes: github.com/manishiitg/multi-llm-provider-go
-  
-  # gocritic settings
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - performance
-      - style
-    disabled-checks:
-      - dupImport      # Can be useful sometimes
-      - ifElseChain    # Sometimes clearer
-      - captLocal      # Allow local captialization
-  
-  # gosec security linter
-  gosec:
-    # Severity level: error, warn, info
-    severity: medium
-    # Confidence level: low, medium, high
-    confidence: medium
-  
-  # revive settings
-  revive:
-    severity: warning
-    confidence: 0.8
-  
-  # staticcheck settings
-  staticcheck:
-    checks: ["all"]
-  
-  # misspell settings
-  misspell:
-    locale: US
-  
-  # goconst settings
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-  
-  # funlen settings (function length)
-  funlen:
-    lines: 100
-    statements: 50
-  
-  # whitespace settings
-  whitespace:
-    multi-if: false
-    multi-func: false
-  
-  # dupl settings (duplicate code detection)
-  dupl:
-    threshold: 100
 
 # Issues configuration
 issues:
@@ -129,57 +67,3 @@ issues:
   
   # Make output more machine-readable
   uniq-by-line: true
-  
-  # Exclude patterns (v2 format)
-  exclude:
-    # Exclude dirs
-    - path: bin
-    - path: vendor
-    - path: testdata
-    
-    # Exclude files
-    - path: ".*\\.pb\\.go$"
-    - path: ".*_generated\\.go$"
-    
-    # Relaxed rules for test files
-    - path: "_test\\.go"
-      linters:
-        - errcheck
-        - dupl
-        - goconst
-        - funlen
-        - gocognit
-    
-    # Allow unused parameters in test files
-    - path: "_test\\.go"
-      text: "parameter.*should have a comment"
-      linters:
-        - revive
-    
-    # Allow long lines in test files
-    - path: "_test\\.go"
-      linters:
-        - lll
-    
-    # Exclude lower-priority gosec checks (focus on critical security issues)
-    - linters:
-        - gosec
-      text: "G104: Errors unhandled"
-    - linters:
-        - gosec
-      text: "G301: Expect directory permissions"
-    - linters:
-        - gosec
-      text: "G306: Expect WriteFile permissions"
-    - linters:
-        - gosec
-      text: "G107: Potential HTTP request"
-    - linters:
-        - gosec
-      text: "G114: Use of net/http serve"
-    - linters:
-        - gosec
-      text: "G115: integer overflow"
-    - linters:
-        - gosec
-      text: "G302: Expect file permissions"
